refactor: factory API